--- a/TodoList/MainWindow.xaml
+++ b/TodoList/MainWindow.xaml
@@ -5,14 +5,34 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TodoList"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="TodoList" Height="250" Width="450">
     <Grid>
         <TabControl>
             <TabItem Header="Add To List" Margin="0,0,5,0">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <TextBlock FontWeight="Bold" Margin="5"  HorizontalAlignment="Center">Select Title</TextBlock>
+                    <TextBox x:Name="txtTitle" Margin="25" MaxLength="50" TextWrapping="Wrap"></TextBox>
+                    <StackPanel Grid.Column="1">
+                        <TextBlock FontWeight="Bold" Margin="5"  HorizontalAlignment="Center">Level of Urgency</TextBlock>
+                        <RadioButton  HorizontalAlignment="Center">Low</RadioButton>
+                        <RadioButton  HorizontalAlignment="Center">Medium</RadioButton>
+                        <RadioButton  HorizontalAlignment="Center">High</RadioButton>
+                    </StackPanel>
+                </Grid>
             </TabItem>
             <TabItem Header="View List">
-                <Grid Background="#FFE5E5E5"/>
+                <Grid Background="#FFE5E5E5">
+                    <Label Content="Second Label" HorizontalAlignment="Center" Margin="0,95,0,0" VerticalAlignment="Top"/>
+                </Grid>
             </TabItem>
         </TabControl>
 
