--- a/TodoList/MainWindow.xaml
+++ b/TodoList/MainWindow.xaml
@@ -11,7 +11,7 @@
             <TabItem Header="Add To List" Margin="0,0,5,0">
                 <Grid Background="#FFE5E5E5">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="*" />
+                        <RowDefinition Height="auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
 
@@ -19,14 +19,19 @@
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <TextBlock FontWeight="Bold" Margin="5"  HorizontalAlignment="Center">Select Title</TextBlock>
-                    <TextBox x:Name="txtTitle" Margin="25" MaxLength="50" TextWrapping="Wrap"></TextBox>
+                    <TextBlock FontWeight="Bold" Margin="5"  HorizontalAlignment="Center">Write Title</TextBlock>
+                    <TextBox x:Name="txtTitle" Margin="30" MaxLength="50" TextWrapping="Wrap"></TextBox>
                     <StackPanel Grid.Column="1">
                         <TextBlock FontWeight="Bold" Margin="5"  HorizontalAlignment="Center">Level of Urgency</TextBlock>
                         <RadioButton  HorizontalAlignment="Center">Low</RadioButton>
                         <RadioButton  HorizontalAlignment="Center">Medium</RadioButton>
                         <RadioButton  HorizontalAlignment="Center">High</RadioButton>
                     </StackPanel>
+
+                    <TextBlock Grid.Row="1" FontWeight="Bold" Margin="5"  HorizontalAlignment="Center">Write Todo</TextBlock>
+                    <TextBox Grid.Row="1" x:Name="txtTodo" Margin="25"></TextBox>
+
+                    <Button Grid.Row="1" Grid.Column="1" x:Name="btnAdd" Margin="40,40,40,40" >Add Todo</Button>
                 </Grid>
             </TabItem>
             <TabItem Header="View List">
