--- a/TodoList/MainWindow.xaml
+++ b/TodoList/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TodoList"
         mc:Ignorable="d"
-        Title="TodoList" Height="250" Width="450">
+        Title="TodoList" Height="300" Width="600">
     <Grid>
         <TabControl>
             <TabItem Header="Add To List" Margin="0,0,5,0">
@@ -23,20 +23,20 @@
                     <TextBox x:Name="txtTitle" Margin="30" MaxLength="50" TextWrapping="Wrap"></TextBox>
                     <StackPanel Grid.Column="1">
                         <TextBlock FontWeight="Bold" Margin="5"  HorizontalAlignment="Center">Level of Urgency</TextBlock>
-                        <RadioButton  HorizontalAlignment="Center">Low</RadioButton>
-                        <RadioButton  HorizontalAlignment="Center">Medium</RadioButton>
-                        <RadioButton  HorizontalAlignment="Center">High</RadioButton>
+                        <RadioButton x:Name="radioLow" HorizontalAlignment="Center">Low</RadioButton>
+                        <RadioButton x:Name="radioMedium" HorizontalAlignment="Center">Medium</RadioButton>
+                        <RadioButton x:Name="radioHigh" HorizontalAlignment="Center">High</RadioButton>
                     </StackPanel>
 
                     <TextBlock Grid.Row="1" FontWeight="Bold" Margin="5"  HorizontalAlignment="Center">Write Todo</TextBlock>
                     <TextBox Grid.Row="1" x:Name="txtTodo" Margin="25"></TextBox>
 
-                    <Button Grid.Row="1" Grid.Column="1" x:Name="btnAdd" Margin="40,40,40,40" >Add Todo</Button>
+                    <Button Grid.Row="1" Grid.Column="1" x:Name="btnAdd" Click="BtnAddTodo_Click" Margin="40,40,40,40" >Add Todo</Button>
                 </Grid>
             </TabItem>
             <TabItem Header="View List">
                 <Grid Background="#FFE5E5E5">
-                    <Label Content="Second Label" HorizontalAlignment="Center" Margin="0,95,0,0" VerticalAlignment="Top"/>
+                    <ListBox x:Name="listTodos" Margin="25"/>
                 </Grid>
             </TabItem>
         </TabControl>
